<resources>
    <string name="app_name">Ruumz</string>
    <string name="action_sign_out">Sign out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Log in</string>
    <!--keys-->
    <string name="parse_app_id">GXgvtP569LEzHZXJmuQv9ACgH7W5IQzrPaKU1pL4</string>
    <string name="parse_client_key">ZtWq01jsDeNxSy1Xd0Htryea5VQAH107k38Bd4ob</string>
    <string name="parse_rest_api_key">bTn0gwmrm7ZCmdvscYz2WqvMWSFLY09MhJ5yGJdS</string>
    <string name="parse_server_url">https://parseapi.back4app.com/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!--Strings related to register-->
    <string name="title_activity_sign_up">Sign up</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="string_sign_up_nav">Sign up</string>
    <string name="action_add_listing">Add Room</string>
    <string name="title_activity_add_listing">Add Listing</string>
    <string name="listing_locale">LOCATION</string>
    <string name="title_activity_add_room">Add Room</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_room_detail">Room Detail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_room_wardrobe_amenity">Fitted \nWardrobe</string>
    <string name="add_room_zesa_amenity">Prepaid \nZESA</string>
    <string name="add_room_entrance_amenity">Own \nEntrance</string>
    <string name="add_room_toilet_amenity">Own \nToilet</string>
    <string name="add_room_water_amenity">Prepaid \nWater</string>
    <string name="add_room_bic_amenity">BIC\n</string>
    <string name="add_room_kitchen_amenity">Kitchen\n</string>
    <string name="add_room_parking_amenity">Parking\n</string>
    <string name="add_room_wifi_amenity">Wifi\n</string>
    <string name="add_room_secure_amenity">Secure\n</string>
    <string name="add_room_couple_amenity">Couple\n</string>
    <string name="add_room_borehole_amenity">Borehole\n</string>
    <string name="add_room_family_amenity">Small \nFamily</string>
    <string name="add_room_habits_amenity">Sober \nHabits</string>
    <string name="add_room_professional_amenity">Professional\n</string>
    <string name="add_room_furnished_amenity">Furnished\n</string>
    <string name="add_room_female_preference">Female\n</string>
    <string name="add_room_male_preference">Male\n</string>
    <string name="title_activity_test_nav_drawer">TestNavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="contact_us_call_num">+263777222134</string>
    <string name="contact_us_custexp_num">+263777085525</string>
    <string name="contact_us_wapp_num">+263774666249</string>
    <string name="contact_us_website_link">http://www.rooms.co.zw</string>
    <string name="title_activity_my_rooms">My Rooms</string>

    <string name="search_hint">Search</string>

    <!--facebook-->
    <string name="facebook_app_id">1656895817905933</string>
    <string name="fb_login_protocol_scheme">fb1656895817905933</string>

    <!--google-->
    <string name="google_web_app_id">AIzaSyB3YjzF7wo-wp9f56VEsycrEIV4oAlXGto</string>
    <string name="server_client_id">975529114539-b4fbe7mdqqasq7nr7sunld2lpsiesfda.apps.googleusercontent.com</string>
    <string name="google_signIn_get_sessionToken_url">https://parseapi.back4app.com/functions/getSessionToken</string>
    <string name="username_blank_error">Username cannot be blank</string>
</resources>
