<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_add_listing"
        android:title="@string/action_add_listing"
        android:orderInCategory="100" app:showAsAction="never"
        android:icon="@drawable/ic_add"/>
    <item android:id="@+id/action_sign_in" android:title="@string/action_sign_in"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sign_out" android:title="@string/action_sign_out"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/search_hint"
        android:icon="@mipmap/ic_search_white_48dp"
        app:showAsAction="always"
        android:actionViewClass="android.widget.SearchView" />

</menu>
